// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search unit test Mounting, testing user input, and dismounting the component. 1`] = `
<Search
  fluid="true"
  icon="search"
  id="search"
  onChange={[MockFunction]}
  placeholder="Search..."
>
  <div
    className="ui input"
  >
    <input
      fluid="true"
      icon="search"
      id="search"
      name="search"
      onChange={[Function]}
      placeholder="Search..."
      value=""
    />
  </div>
</Search>
`;

exports[`Search unit test Rendering component with props that match the original component. 1`] = `
<div
  className="ui input"
>
  <input
    fluid="true"
    icon="search"
    id="search"
    name="search"
    onChange={[Function]}
    placeholder="Search..."
    value=""
  />
</div>
`;

exports[`Search unit test Rendering component without props. 1`] = `
<div
  className="ui input"
>
  <input
    fluid="true"
    icon="search"
    id="search"
    name="search"
    onChange={[Function]}
    placeholder="Search..."
    value=""
  />
</div>
`;
